# template-sokol-cpp-meson

./: .clangd  .gitignore  README.md  main.cpp  meson.build  meson_options.txt
include/: triangle.h
shaders/: compile_shaders.py  shaders_compiled.stamp  triangle.glsl
shaders/compiled/: .gitkeep
subprojects/: sokol-tools-bin.wrap  sokol.wrap
subprojects/packagefiles/sokol/: meson.build
subprojects/packagefiles/sokol-tools-bin/: meson.build
